syntax = "proto3";
package osmosis.smartaccount.v1beta1;

import "gogoproto/gogo.proto";
import "osmosis/smartaccount/v1beta1/params.proto";
import "osmosis/smartaccount/v1beta1/models.proto";

option go_package = "github.com/osmosis-labs/osmosis/v24/x/smart-account/types";

// AuthenticatorData represents a genesis exported account with Authenticators.
// The address is used as the key, and the account authenticators are stored in
// the authenticators field.
message AuthenticatorData {
  // address is an account address, one address can have many authenticators
  string address = 1;

  // authenticators are the account's authenticators, these can be multiple
  // types including SignatureVerification, AllOfs, CosmWasmAuthenticators, etc
  repeated AccountAuthenticator authenticators = 2
      [ (gogoproto.nullable) = false ];
}

// GenesisState defines the authenticator module's genesis state.
message GenesisState {
  // params define the parameters for the authenticator module.
  Params params = 1 [ (gogoproto.nullable) = false ];

  // next_authenticator_id is the next available authenticator ID.
  uint64 next_authenticator_id = 2;

  // authenticator_data contains the data for multiple accounts, each with their
  // authenticators.
  repeated AuthenticatorData authenticator_data = 3
      [ (gogoproto.nullable) = false ];
}
